- DAQ.DAQGate: Archive processing disable support is added. Into this mode for current archives is set current time.
- DAQ.ICP_DAS: Connection's error display into attribute "err" is added.
- DAQ.LogicLev: A parameter main attributes (SHIFR,NAME and DESCR) bridging to template support is added.
- UI.Vision: The childs window of main window into runtime is made not resizible and not minimizable.


2009-02-30 Roman
- FIX:Function,UI.VCAEngine: Creation independent function for different from parent widgets is made.
- FIX:DAQ.LogicLev: Exclude EVAL writing by link.
- UI.VCAEngine: Dynamic link is made deep check for find parameters into present link.
- UI.Vision: Stacked widgets selection is made by second click to up-selected widget.
- UI.Vision: The color for temporary a page loading messages into container is set to BorderColor for primitive "Box".


2009-09-28 Roman
- SYS.Template: The collumn "Access" is renamed to "Configure".
- !!:DAQ.BlockCalc: Direct links to parameters using is added. 
- DAQ.JavaLikeCalc: The operation "AND" and "OR" is made EVAL insensitivity.


2009-09-26 Roman
- !!:UI.QTCfg: Documents and translations is updated and released version 1.8.1.
- !!:UI.VCAEngine: Documents and translations is updated, the document translated to English is added and released version 0.9.0.
- !!:UI.Vision: Documents and translations is updated, the document translated to English is added and released version 0.9.0.
- !:UI.WebCfg: The document translated to English is added.
- !!:UI.WebCfgD: Documents and translations is updated, the German translation is added and released version 0.6.2.
- !!:UI.WebVision: Documents and translations is updated, the document translated to English is added and released version 0.7.0.
- !:Transport.SSL, Transport.Sockets: The German translation is added.


2009-09-24 Roman
- FIX:Archive: Get vals from values archive is fixed for don't use limits for limited buffers.